@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: boardpos.h,v 1.5 2007/09/14 11:30:48 c_anthon Exp $
+ * $Id: boardpos.h,v 1.6 2008/03/08 09:17:39 Superfly_Jon Exp $
  */
 
 #ifndef _BOARDPOS_H_
@@ -30,8 +30,6 @@
 #define POINT_LEFT 33
 #define POINT_RESIGN 34
     
-#define ARROW_SIZE 5
-
 extern int positions[ 2 ][ 30 ][ 3 ];
 
 extern void
@@ -50,8 +48,7 @@ CubePosition( const int crawford_game, const int cube_use,
               const int doubled, const int cube_owner,
               int *px, int *py, int *porient );
 
-extern void
-ArrowPosition( const int clockwise, const int nSize, int *px, int *py );
+extern void ArrowPosition( const int clockwise, int turn, const int nSize, int *px, int *py );
 
 
 extern void
